[package]
name = "VnResourceTestFE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.192"
wasm-bindgen-futures = "0.4.38"
yew = { version = "0.21.0", features = ["csr"] }

[profile.dev]
opt-level = 3